
DROP SCHEMA IF EXISTS chinwag CASCADE;
CREATE SCHEMA chinwag;

CREATE DOMAIN chinwag.t_username AS varchar(32)
CHECK (
  length(VALUE) BETWEEN 1 AND 32
);

CREATE TYPE chinwag.reaction AS ENUM (
  'thumbs_up',
  'cry',
  'love',
  'laugh',
  'strong',
  'celebrate'
);


CREATE TABLE chinwag.chats (
  id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  icon_url text,
  name varchar(75) NOT NULL,
  descr text,
  created_at timestamptz NOT NULL DEFAULT (now()),
  updated_at timestamptz
);

CREATE TABLE chinwag.images (
  id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  img_url text NOT NULL UNIQUE,
  resource_type text NOT NULL,
  public_id text NOT NULL UNIQUE,
  created_at timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE chinwag.users ( 
  id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY, 
  username chinwag.t_username NOT NULL UNIQUE, 
  email text NOT NULL UNIQUE,
  nickname varchar(25) NOT NULL,
  avatar_id integer REFERENCES chinwag.images(id) ON DELETE RESTRICT,
  UNIQUE (email)
);

CREATE VIEW chinwag.user_profile AS
SELECT u.*,i.id as image_id, img_url, resource_type, public_id
FROM chinwag.users AS u
LEFT JOIN chinwag.images AS i
  ON u.avatar_id = i.id;


CREATE TABLE chinwag.messages (
  id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  reply_to integer REFERENCES chinwag.messages(id), -- this one can be null if the original replied to message gets deleted
  content varchar(1000) NOT NULL,
  sent_at timestamptz NOT NULL DEFAULT (now()),
  delivered_at timestamptz,
  updated_at timestamptz,
  read_at timestamptz,
  deleted boolean NOT NULL DEFAULT FALSE,
  chat_id integer NOT NULL REFERENCES chinwag.chats(id) ON DELETE CASCADE,
  author_id integer NOT NULL REFERENCES chinwag.users(id) ON DELETE CASCADE
);

CREATE TABLE chinwag.message_image (
  message_id integer NOT NULL REFERENCES chinwag.messages(id) ON DELETE CASCADE,
  image_id integer NOT NULL REFERENCES chinwag.images(id) ON DELETE CASCADE,
  
  PRIMARY KEY (message_id, image_id)
);

CREATE TABLE chinwag.activity (
  user_id integer PRIMARY KEY REFERENCES chinwag.users(id) ON DELETE CASCADE,
  last_active timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE chinwag.passwords (
  user_id integer PRIMARY KEY REFERENCES chinwag.users(id) ON DELETE CASCADE, 
  user_password varchar(64) NOT NULL
);

CREATE TABLE chinwag.message_reaction (
  reaction chinwag.reaction NOT NULL,
  user_id integer NOT NULL REFERENCES chinwag.users(id) ON DELETE CASCADE,
  message_id integer NOT NULL REFERENCES chinwag.messages(id) ON DELETE CASCADE,
  PRIMARY KEY (user_id, message_id)
);


CREATE TABLE chinwag.friends (
  id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  user_id_1 integer NOT NULL REFERENCES chinwag.users(id) ON DELETE CASCADE,
  user_id_2 integer NOT NULL REFERENCES chinwag.users(id) ON DELETE CASCADE,
  UNIQUE (user_id_1, user_id_2)
);

CREATE TABLE chinwag.chat_members (
  id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  chat_id integer NOT NULL REFERENCES chinwag.chats(id) ON DELETE CASCADE,
  user_id integer NOT NULL REFERENCES chinwag.users(id) ON DELETE CASCADE,

  UNIQUE(chat_id,user_id)
);